--- a/.github/workflows/update_forecast.yml
+++ b/.github/workflows/update_forecast.yml
@@ -2,27 +2,27 @@ name: Update Shipping Forecast
 
 on:
   schedule:
-    # Runs at 05:00 UTC daily
-    - cron: '0 5 * * *'
+    - cron: '0 5 * * *'  # Runs at 05:00 UTC daily.
 
 jobs:
   update-forecast:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: '3.0'
-    - name: Install dependencies
-      run: gem install shipping-forecast
-    - name: Update Forecast
-      run: ruby update_forecast.rb
-    - name: Commit and Push if changed
-      run: |
-        git config --global user.email "cole.chapman15@gmail.com"
-        git config --global user.name "Cole Chapman"
-        git add forecast.html
-        git commit -m "Update Shipping Forecast" || exit 0
-        git push
+      - uses: actions/checkout@v2
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.0'
+      - name: Install dependencies
+        run: gem install shipping-forecast
+      - name: Generate Forecast Fragment
+        run: ruby update_forecast.rb
+      - name: Update index.html
+        run: bash update_index.sh
+      - name: Commit and Push Updates
+        run: |
+          git config --global user.email "you@example.com"
+          git config --global user.name "Your Name"
+          git add index.html
+          git commit -m "Update Shipping Forecast" -a || exit 0
+          git push
