--- a/.github/workflows/update_forecast.yml
+++ b/.github/workflows/update_forecast.yml
@@ -3,6 +3,7 @@ name: Update Shipping Forecast
 on:
   schedule:
     - cron: '0 5 * * *'  # Runs at 05:00 UTC daily.
+  workflow_dispatch:  # This line enables manual triggering of the workflow.
 
 jobs:
   update-forecast:
