--- a/.github/workflows/update_forecast.yml
+++ b/.github/workflows/update_forecast.yml
@@ -33,4 +33,4 @@ jobs:
           git config user.email "cole.chapman15@gmail.com"
           git add data/shipping_forecast.txt
           git commit -m "Update Shipping Forecast data" -a || echo "No changes to commit"
-          git push --set-upstream https://colechapman:${MY_GITHUB_TOKEN}@github.com/colechapman/colechapman.github.io.git ${GITHUB_REF#refs/heads/}
+          git push
